# jwst-mosaic-skymatch

./: .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  README.rst  pyproject.toml
docs/: conf.py  index.rst
examples/: PixelSkyMatchStep_example.ipynb
jwst_mosaic_skymatch/: __init__.py  nircam_skymatch_trick.py  pixel_skymatch_step.py
